# AdventOfCode_2020

./: CMakeLists.txt  README.md
cmake/: standard_warnings_and_optimizations.cmake
src/: day10_adapter_array.cpp  day11_seating_system.cpp  day12_rain_risk.cpp  day13_shuttle_search.cpp  day14_docking_data.cpp  day15_rambunctious_recitation.cpp  day16_ticket_translation.cpp  day17_conway_cubes.cpp  day18_operation_order.cpp  day19_monster_message.cpp  day1_report_repair.cpp  day20_jurassic_jigsaw.cpp  day21_allergen_assessment.cpp  day22_crab_combat.cpp  day23_crab_cups.cpp  day24_lobby_layout.cpp  day25_combo_breaker.cpp  day2_password_philosophy.cpp  day3_toboggan_trajectory.cpp  day4_passport_processing.cpp  day5_binary_boarding.cpp  day6_custom_customs.cpp  day7_handy_haversacks.cpp  day8_handheld_halting.cpp  day9_encoding_error.cpp
